--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viaggio a Londra</title>
 </head>
 <body>
-    
+    <!-- header con titolo e foto introduttive -->
+    <header>
+
+    </header>
+    <!-- /header con titolo e foto introduttive -->
+
+    <!-- corpo principale -->
+    <main>
+        <!-- Sezione spese -->
+        <section>
+
+        </section>
+        <!-- /Sezione spese -->
+        <!-- sezione attività -->
+        <section>
+
+        </section>
+        <!-- /sezione attività -->
+        <!-- sezione info  -->
+        <section>
+
+        </section>
+        <!-- /sezione info  -->
+        <!-- galleria -->
+        <section>
+            
+        </section>
+        <!-- /galleria -->
+
+    </main>
+    <!-- /corpo principale -->
+
+
 </body>
 </html>
