--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <!-- header con titolo e foto introduttive -->
     <header>
-
+        <h1>Il mio viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="Routa panoramica di Londra, di notte, illuminata di viola.">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="Foto di Londra, di notte, vista dal fiume.">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Foto del big bang di Londra, di notte, visto dal fiume, illuminato.">
+        <hr>
     </header>
     <!-- /header con titolo e foto introduttive -->
 
@@ -32,7 +36,7 @@
         <!-- /sezione info  -->
         <!-- galleria -->
         <section>
-            
+
         </section>
         <!-- /galleria -->
 
